# ds_255_spr_25_3

./: Dockerfile  README.md  model_pipeline.pkl  pyproject.toml
src/: main.py
tests/: test_src.py
trainer/: train.py
