[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "James Winegar",email = "james.winegar@corrdyn.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.0"
